Added Javadocs and brushed up the code